# automated-workflows

toefl_scouts/: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  railway.toml  requirements.txt  test_config.py
toefl_scouts/.github/workflows/: daily_scout.yml
toefl_scouts/src/: __init__.py  config.py  content_analyzer.py  database.py  discord_notifier.py  reddit_scraper.py
